fix svg css in table

--- a/frontend/src/scss/_tables.scss
+++ b/frontend/src/scss/_tables.scss
@@ -2,10 +2,14 @@
 .table {
   font-size: .7rem;
 
-  svg {
-    width: .7rem;
-    height: .7rem;
-    color: $gray-color-dark;
+  tbody > tr > td {
+    .btn {
+      border: 0;
+    }
+
+    svg {
+      margin-right: 0;
+    }
   }
 
   .form-checkbox {
