Style v-select form

--- a/frontend/src/scss/_forms.scss
+++ b/frontend/src/scss/_forms.scss
@@ -5,3 +5,12 @@
 .form-input-hint {
   margin-bottom: 0;
 }
+
+.v-select {
+  width: 100%;
+
+  input[type=search],
+  input[type=search]:focus {
+    background: $light-color;
+  }
+}
