Rubocop auto and rbp clear

--- a/app/views/user_mailer/create.text.erb
+++ b/app/views/user_mailer/create.text.erb
@@ -1,10 +1,10 @@
 Hi <%= @user.name %>,
 
-<%= @user.company.name %> company invites you to join 1Punch
+<%= @company.name %> company invites you to join 1Punch
 
 Please login with following information:
 
-Company URL: https://<%= @user.company.namespace %>.1punch.io
+Company URL: https://<%= @company.namespace %>.1punch.io
 Email: <%= @user.email %>
 Password: <%= @password %>
 
