--- a/frontend/src/scss/_forms.scss
+++ b/frontend/src/scss/_forms.scss
@@ -8,9 +8,5 @@
 
 .v-select {
   width: 100%;
-
-  input[type=search],
-  input[type=search]:focus {
-    background: $light-color;
-  }
+  background-color: $light-color;
 }
