Improve style a bit

--- a/frontend/src/scss/_box.scss
+++ b/frontend/src/scss/_box.scss
@@ -4,6 +4,10 @@
   background-color: $light-color;
   border-radius: $border-radius;
 
+  &.box-group {
+    height: 172px;
+  }
+
   .box-header-flex,
   .box-content-flex {
     display: flex;
