--- a/frontend/src/scss/main.scss
+++ b/frontend/src/scss/main.scss
@@ -38,6 +38,7 @@
 @import 'accordions';
 @import '../../node_modules/spectre.css/src/autocomplete';
 @import '../../node_modules/spectre.css/src/avatars';
+@import 'avatars';
 @import '../../node_modules/spectre.css/src/badges';
 @import '../../node_modules/spectre.css/src/breadcrumbs';
 @import '../../node_modules/spectre.css/src/cards';
