--- a/frontend/src/scss/main.scss
+++ b/frontend/src/scss/main.scss
@@ -30,6 +30,7 @@
 
 // Layout
 @import '../../node_modules/spectre.css/src/layout';
+@import 'layout';
 @import '../../node_modules/spectre.css/src/navbar';
 @import 'navbar';
 
