--- a/app/views/layouts/static.html.erb
+++ b/app/views/layouts/static.html.erb
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="<%= I18n.locale %>">
 
 <head>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width">
 
 <title><%= yield(:title) || '1Punch' %></title>
 <meta name="description" content="<%= yield(:description) || '1Punch description' %>">
