--- a/frontend/src/scss/_base.scss
+++ b/frontend/src/scss/_base.scss
@@ -9,8 +9,8 @@ body {
   background-color: $gray-color-lightest;
   color: $dark-color;
   overflow-x: visible;
-  @media (max-width: $size-xl) {
-    width: 1200px;
+  @media (max-width: $size-lg) {
+    width: $control-width-lg;
   }
 }
 
