Improve frontend css a bit

--- a/frontend/src/scss/_variables.scss
+++ b/frontend/src/scss/_variables.scss
@@ -64,6 +64,7 @@ $unit-16: 3.2rem;
 $html-font-size: 20px;
 $html-line-height: 1.5;
 $font-size: .8rem;
+$font-size-xs: .6rem;
 $font-size-sm: .7rem;
 $font-size-lg: .9rem;
 $line-height: 1rem;
