--- a/frontend/src/scss/main.scss
+++ b/frontend/src/scss/main.scss
@@ -56,6 +56,7 @@
 @import '../../node_modules/spectre.css/src/tabs';
 @import 'tabs';
 @import '../../node_modules/spectre.css/src/tiles';
+@import 'tiles';
 @import '../../node_modules/spectre.css/src/toasts';
 @import 'toast';
 @import '../../node_modules/spectre.css/src/tooltips';
