--- a/frontend/src/scss/_modals.scss
+++ b/frontend/src/scss/_modals.scss
@@ -1,3 +1,8 @@
+.modal-container .modal-body {
+  max-height: initial;
+  overflow-y: initial;
+}
+
 .modal:target .modal-container,
 .modal.active .modal-container {
   height: 80%;
