Fix display unread noti number and noti date

--- a/frontend/src/scss/_navbar.scss
+++ b/frontend/src/scss/_navbar.scss
@@ -30,7 +30,7 @@
     }
 
     &.badge[data-badge]::after {
-      width: .8rem;
+      width: auto;
       height: .8rem;
       font-size: .6rem;
       top: 0;
