--- a/frontend/src/scss/_variables.scss
+++ b/frontend/src/scss/_variables.scss
@@ -1,30 +1,36 @@
 // Core colors
-$primary-color: #2d91ff;
+$primary-color: #439AFF; // pri
 $primary-color-dark: darken($primary-color, 3%);
 $primary-color-darkest: #0052ac;
 $primary-color-light: lighten($primary-color, 3%);
-$secondary-color: lighten($primary-color, 37.5%);
+$secondary-color: #DCECFF; //pri-light
 $secondary-color-dark: darken($secondary-color, 3%);
 $secondary-color-light: lighten($secondary-color, 3%);
 
 // Gray colors
-$dark-color: #454d5d;
-$light-color: #fff;
-$gray-color: lighten($dark-color, 40%);
-$gray-color-dark: darken($gray-color, 25%);
-$gray-color-light: lighten($gray-color, 20%);
-$gray-color-lightest: #f2f2f2;
+$light-color: #FFFFFF; // gs-0
+$gray-color-lightest: #F0F3F7; // gs-1
+$gray-color-light: #E3E3E7; // gs-2
+$gray-color: #ABB2B6; // gs-3
+$gray-color-dark: #6C777E; // gs-4
+$dark-color: #2E3E48; // gs-5
 
-$border-color: lighten($dark-color, 60%);
-$border-color-dark: darken($border-color, 10%);
-$bg-color: lighten($dark-color, 66%);
+$border-color: $gray-color-light;
+$border-color-dark: $gray-color;
+$bg-color: $gray-color-lightest;
 $bg-color-dark: darken($bg-color, 3%);
 $bg-color-light: $light-color;
 
 // Control colors
-$success-color: #4cd964;
-$warning-color: #ffb200;
-$error-color: #ff3b30;
+$success-color: #10B742;  // sec-1
+$error-color: #FC4E5C;  // sec-2
+$warning-color: #FC9F00;  //sec-3
+$info-color: #AC68FF; //sec-4
+$success-color-light: #D3F1DC; // sec-1-light
+$error-color-light: #FEDEE1;  //sec-2-light
+$warning-color-light: #FEEDD0;  //sec-3-light
+$info-color-light: #ECDDFF; //sec-4-light
+
 
 // Other colors
 $code-color: #e06870;
