Implement notification page

--- a/frontend/src/scss/main.scss
+++ b/frontend/src/scss/main.scss
@@ -66,12 +66,13 @@
 
 // Handcoded css by 1PAC.VN team
 @import 'box';
-@import 'list';
-@import 'setting';
 @import 'datepicker';
-@import 'toolbar';
-@import 'title';
+@import 'list';
+@import 'notifications';
 @import 'punch';
+@import 'setting';
+@import 'title';
+@import 'toolbar';
 @import 'transition';
 
 // Utility classes
