update calendar ui -css

--- a/frontend/src/scss/main.scss
+++ b/frontend/src/scss/main.scss
@@ -63,6 +63,7 @@
 
 // Experimentals
 @import '../../node_modules/spectre.css/src/calendars';
+@import 'calendars';
 
 // Handcoded css by 1PAC.VN team
 @import 'box';
