update setting pages - css

--- a/frontend/src/scss/_box.scss
+++ b/frontend/src/scss/_box.scss
@@ -4,8 +4,11 @@
   background-color: $light-color;
   border-radius: $border-radius;
 
-  &.setting {
+  &-setting {
+    @include shadow-variant(.05rem);
     padding: 1.6rem 2rem;
+    background-color: $light-color;
+    border-radius: $border-radius;
   }
 
   &.box-group {
