--- a/frontend/src/scss/_utilities.scss
+++ b/frontend/src/scss/_utilities.scss
@@ -39,11 +39,8 @@
   }
 }
 
-.mt-10 {
-  margin-top: $unit-10;
-}
-
 @include margin-variant(4, $unit-4); //Margin variant .8rem
+@include margin-variant(10, $unit-10); //Margin variant 2rem
 @include padding-variant(4, $unit-4); //Padding variation .8rem
 @include margin-variant(5, $unit-5); //Margin variant 1rem
 @include padding-variant(5, $unit-5); //Padding variation 1rem
