--- a/frontend/src/scss/_variables.scss
+++ b/frontend/src/scss/_variables.scss
@@ -9,7 +9,7 @@ $secondary-color-light: lighten($secondary-color, 3%);
 
 // Gray colors
 $dark-color: #2e3e48; // grayscale-5
-$light-color: #ffffff; // grayscale-0
+$light-color: #fff; // grayscale-0
 $gray-color: #abb2b6; // grayscale-3
 $gray-color-dark: #6c777e; // grayscale-4
 $gray-color-light: #e3e3e7; // grayscale-2
