--- a/frontend/src/scss/_setting.scss
+++ b/frontend/src/scss/_setting.scss
@@ -1,15 +1,16 @@
 .setting-sidebar {
+  @include shadow-variant(.05rem);
+
   margin: 0;
   list-style: none;
   background-color: $light-color;
   border-radius: $border-radius;
-  @include shadow-variant(.05rem);
 
   li {
     margin-top: 0;
 
-    &:not(:first-child){
-      border-top: 0.05rem solid $border-color;
+    &:not(:first-child) {
+      border-top: .05rem solid $border-color;
     }
   }
 
@@ -17,7 +18,7 @@
     height: 2.5rem;
     display: flex;
     align-items: center;
-    padding: 0 0.8rem;
+    padding: 0 .8rem;
     color: $gray-color;
     text-decoration: none;
 
@@ -27,7 +28,7 @@
     }
 
     &.active {
-      border-right: 0.2rem solid $primary-color;
+      border-right: .2rem solid $primary-color;
       color: $primary-color;
 
       svg {
@@ -36,7 +37,7 @@
     }
 
     svg {
-      margin-right: 0.8rem;
+      margin-right: .8rem;
       height: 1.2rem;
       width: 1.2rem;
     }
