--- a/frontend/src/scss/_transition.scss
+++ b/frontend/src/scss/_transition.scss
@@ -1,9 +1,11 @@
 // animation class use in vue transition
 
-.fade-enter-active, .fade-leave-active {
+.fade-enter-active,
+.fade-leave-active {
   transition: opacity .5s;
 }
 
-.fade-enter, .fade-leave-to {
+.fade-enter,
+.fade-leave-to {
   opacity: 0;
 }
