--- a/frontend/src/scss/_forms.scss
+++ b/frontend/src/scss/_forms.scss
@@ -44,7 +44,7 @@ input[type=search],
     }
 
     input[type=search] {
-      height: 2rem;
+      height: 2rem !important;
     }
   }
 
@@ -53,7 +53,7 @@ input[type=search],
   }
 
   .open-indicator {
-    display: none;
+    display: none !important;
   }
 }
 
