--- a/frontend/src/scss/_tables.scss
+++ b/frontend/src/scss/_tables.scss
@@ -3,8 +3,14 @@
   font-size: .7rem;
   border-radius: $border-radius;
 
+
   th {
     border-bottom: $border-width solid $border-color;
+    text-align: center;
+    white-space: nowrap;
+    padding-left: 0;
+    padding-right: 0;
+
     svg {
       height: 0.6rem;
       width: 0.6rem;
@@ -44,6 +50,38 @@
     td,
     th {
       border: 0;
+    }
+  }
+
+  &.table-scroll {
+    white-space: normal;
+    padding-bottom: 0;
+
+    .cell {
+      &-xl {
+        width: 400px;
+        min-width: 400px;
+      }
+
+      &-lg {
+        width: 220px;
+        min-width: 220px;
+      }
+
+      &-md {
+        width: 140px;
+        min-width: 140px;
+      }
+
+      &-sm {
+        width: 120px;
+        min-width: 120px;
+      }
+
+      &-xs {
+        width: 80px;
+        min-width: 80px;
+      }
     }
   }
 }
