--- a/frontend/src/scss/_tables.scss
+++ b/frontend/src/scss/_tables.scss
@@ -3,13 +3,56 @@
   font-size: .7rem;
   border-radius: $border-radius;
 
+  th.no-break {
+    white-space: nowrap;
+    min-width: 200px;
+  }
+
+  &.table-scroll {
+    width: 100%;
+    white-space: normal;
+    padding-bottom: 0;
+    display: block;
+
+    th {
+      padding-left: 0;
+      padding-right: 0;
+    }
+
+    .cell {
+      &-xl {
+        min-width: 500px;
+        max-width: 700px;
+      }
+
+      &-lg {
+        min-width: 200px;
+        max-width: 250px;
+      }
+
+      &-md {
+        min-width: 100px;
+        max-width: 140px;
+      }
+
+      &-sm {
+        min-width: 150px;
+        max-width: 180px;
+      }
+
+      &-xs {
+        min-width: 80px;
+        max-width: 120px;
+      }
+    }
+  }
 
   th {
     border-bottom: $border-width solid $border-color;
     text-align: center;
     white-space: nowrap;
-    padding-left: 0;
-    padding-right: 0;
+    padding-left: 0.8rem;
+    padding-right: 0.8rem;
 
     svg {
       height: 0.6rem;
@@ -50,38 +93,6 @@
     td,
     th {
       border: 0;
-    }
-  }
-
-  &.table-scroll {
-    white-space: normal;
-    padding-bottom: 0;
-
-    .cell {
-      &-xl {
-        width: 400px;
-        min-width: 400px;
-      }
-
-      &-lg {
-        width: 220px;
-        min-width: 220px;
-      }
-
-      &-md {
-        width: 140px;
-        min-width: 140px;
-      }
-
-      &-sm {
-        width: 120px;
-        min-width: 120px;
-      }
-
-      &-xs {
-        width: 80px;
-        min-width: 80px;
-      }
     }
   }
 }
