--- a/frontend/src/scss/_tables.scss
+++ b/frontend/src/scss/_tables.scss
@@ -98,4 +98,16 @@
       border: 0;
     }
   }
+
+  &.sortable-table {
+    thead > th {
+      cursor: pointer;
+    }
+
+    svg {
+      opacity: 0;
+
+      &.show { opacity: 1; }
+    }
+  }
 }
