--- a/frontend/src/scss/_buttons.scss
+++ b/frontend/src/scss/_buttons.scss
@@ -52,44 +52,11 @@
     }
   }
 
+  &.btn-info {
+    @include button-variant($info-color);
+  }
+
   &.btn-submit {
     margin-top: $unit-4;
   }
 }
-
-// Button groups
-// .btn-group {
-//   display: inline-flex;
-//   flex-wrap: wrap;
-
-//   .btn {
-//     flex: 1 0 auto;
-//     &:first-child:not(:last-child) {
-//       border-bottom-right-radius: 0;
-//       border-top-right-radius: 0;
-//     }
-//     &:not(:first-child):not(:last-child) {
-//       border-radius: 0;
-//       margin-left: -$border-width;
-//     }
-//     &:last-child:not(:first-child) {
-//       border-bottom-left-radius: 0;
-//       border-top-left-radius: 0;
-//       margin-left: -$border-width;
-//     }
-//     &:focus,
-//     &:hover,
-//     &:active,
-//     &.active {
-//       z-index: $zindex-0;
-//     }
-//   }
-
-//   &.btn-group-block {
-//     display: flex;
-
-//     .btn {
-//       flex: 1 0 0;
-//     }
-//   }
-// }
