--- a/frontend/src/scss/_navbar.scss
+++ b/frontend/src/scss/_navbar.scss
@@ -19,6 +19,11 @@
     &.active .notification-dropdown {
       display: block;
     }
+
+    .menu {
+      left: initial;
+      right: 0;
+    }
   }
 
   .notification {
