Decrease font-size a bit

--- a/frontend/src/scss/_box.scss
+++ b/frontend/src/scss/_box.scss
@@ -6,7 +6,7 @@
 
   &-setting {
     @include shadow-variant(.05rem);
-    padding: 1.6rem 2rem;
+    padding: 1.2rem;
     background-color: $light-color;
     border-radius: $border-radius;
   }
