--- a/frontend/src/scss/_setting.scss
+++ b/frontend/src/scss/_setting.scss
@@ -15,10 +15,9 @@
   }
 
   a {
-    height: 2.5rem;
     display: flex;
     align-items: center;
-    padding: 0 .8rem;
+    padding: .4rem .8rem;
     color: $gray-color;
     text-decoration: none;
 
