--- a/frontend/src/scss/_typography.scss
+++ b/frontend/src/scss/_typography.scss
@@ -1,16 +1,16 @@
 h1,
 .h1 {
-  font-size: 1.5rem;
+  font-size: 1.2rem;
   line-height: 1.35;
 }
 h2,
 .h2 {
-  font-size: 1.2rem;
+  font-size: 1rem;
   line-height: 1.35;
 }
 h3,
 .h3 {
-  font-size: 1rem;
+  font-size: .9rem;
   line-height: 1.2;
 }
 h4,
