Improve style a bit

--- a/frontend/src/scss/_buttons.scss
+++ b/frontend/src/scss/_buttons.scss
@@ -9,6 +9,10 @@
     margin-right: .2rem;
   }
 
+  &:focus {
+    box-shadow: none;
+  }
+
   &:focus,
   &:hover {
     border-color: $gray-color-dark;
