--- a/frontend/src/scss/_forms.scss
+++ b/frontend/src/scss/_forms.scss
@@ -77,3 +77,14 @@ input[type=search],
     color: $gray-color;
   }
 }
+
+.has-error .form-input,
+.form-input.is-error,
+.has-error .form-select,
+.form-select.is-error {
+  border-color: $error-color;
+  &:focus {
+    box-shadow: none;
+  }
+}
+
