--- a/frontend/src/scss/_navbar.scss
+++ b/frontend/src/scss/_navbar.scss
@@ -53,6 +53,7 @@
     cursor: pointer;
     transition: color .1s ease-in-out;
 
+    &:focus,
     &.active,
     &:hover {
       color: $primary-color;
