--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,16 +5,23 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
 <title>1Punch</title>
-<meta name="description" content="1Punch description">
+<meta name="description" content="Punch description">
 
 <link rel="dns-prefetch" href="">
 
-<link rel="shortcut icon" type="image/x-icon" href="">
-<link rel="apple-touch-icon" sizes="180x180" href="">
-<link rel="apple-touch-icon" sizes="152x152" href="">
-<link rel="apple-touch-icon" sizes="120x120" href="">
-<link rel="apple-touch-icon" sizes="76x76" href="">
-<link rel="icon" sizes="192x192" href="">
+<link rel="shortcut icon" type="image/x-icon" href="<%= asset_url('favicon.ico') %>">
+<link rel="apple-touch-icon" sizes="180x180" href="<%= asset_url('icon_180x180.png') %>">
+<link rel="apple-touch-icon" sizes="152x152" href="<%= asset_url('icon_152x152.png') %>">
+<link rel="apple-touch-icon" sizes="120x120" href="<%= asset_url('icon_120x120.png') %>">
+<link rel="apple-touch-icon" sizes="76x76" href="<%= asset_url('icon_76x76.png') %>">
+<link rel="icon" sizes="192x192" href="<%= asset_url('icon_192x192.png') %>">
+
+<meta property="og:title" content="Punch">
+<meta property="og:site_name" content="Punch">
+<meta property="og:description" content="Punch description">
+<meta property="og:url" content="https://punch.ooo">
+<meta property="og:image" content="<%= asset_url('og.png') %>">
+<meta property="og:type" content="website">
 
 <link rel="stylesheet" href="<%= @webpack_assets['app.css'] %>">
 <%= csrf_meta_tags %>
@@ -25,7 +32,7 @@
 </div>
 
 <script>
-window.INITIAL_STATE = <%= raw @initial_state.to_json %>
+window.initialStates = function () { return <%= raw @initial_state.to_json %> }
 </script>
 <script type="text/javascript" src="<%= @webpack_assets['manifest.js'] %>"></script>
 <script type="text/javascript" src="<%= @webpack_assets['vendor.js'] %>"></script>
