update color annual leave btn, update link 404 page btn

--- a/frontend/src/scss/_buttons.scss
+++ b/frontend/src/scss/_buttons.scss
@@ -60,6 +60,10 @@
     @include button-variant($info-color);
   }
 
+  &.btn-notice {
+    @include button-variant($notice-color);
+  }
+
   &.btn-submit {
     margin-top: $unit-4;
   }
