--- a/app/views/layouts/static.html.erb
+++ b/app/views/layouts/static.html.erb
@@ -6,15 +6,15 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width">
 
-<title><%= yield(:title) || '1Punch' %></title>
-<meta name="description" content="<%= yield(:description) || '1Punch description' %>">
+<title>Punch</title>
+<meta name="description" content="Punch description">
 
-<link rel="canonical" href="<%= yield(:canonical) || root_url %>">
+<link rel="canonical" href="<%= root_url %>">
 
-<meta property="og:title" content="<%= yield(:title) || '1Punch' %>">
-<meta property="og:site_name" content="<%= yield(:title) || '1Punch' %>">
-<meta property="og:description" content="<%= yield(:og_description) || '1Punch description' %>">
-<meta property="og:url" content="<%= yield(:og_url) || root_url %>">
+<meta property="og:title" content="Punch">
+<meta property="og:site_name" content="Punch">
+<meta property="og:description" content="Punch description">
+<meta property="og:url" content="root_url">
 <meta property="og:image" content="<%= asset_url('og.png') %>">
 <meta property="og:type" content="website">
 
