--- a/frontend/src/scss/_tables.scss
+++ b/frontend/src/scss/_tables.scss
@@ -5,33 +5,25 @@
 
   td {
     white-space: nowrap;
+
     &.break {
       white-space: normal;
-      min-width: 200px;
-      max-width: 400px;
     }
   }
 
   &.table-scroll {
     white-space: normal;
     padding-bottom: 0;
-    display: block;
-
-    th {
-      padding-left: 0;
-      padding-right: 0;
-      text-align: center;
-    }
 
     .cell {
       &-xl {
-        min-width: 500px;
-        max-width: 700px;
+        min-width: 300px;
+        max-width: 300px;
       }
 
       &-lg {
-        min-width: 200px;
-        max-width: 250px;
+        min-width: 180px;
+        max-width: 180px;
       }
 
       &-md {
@@ -46,6 +38,16 @@
 
       &-xs {
         min-width: 80px;
+        max-width: 120px;
+      }
+
+      &-mw-120 {
+        min-width: 120px;
+        max-width: 150px;
+      }
+
+      &-mw-90 {
+        min-width: 90px;
         max-width: 120px;
       }
     }
